--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,19 @@ name = "wol-automation"
 version = "0.1.0"
 description = "Simple automation for WOL and Shutdown during power outages"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.8"
 dependencies = [
-    "black>=25.1.0",
-    "mypy>=1.15.0",
+    "black>=24.8.0",
+    "jinja2>=3.1.6",
+    "mypy>=1.14.1",
     "paramiko>=3.5.1",
     "psutil>=6.1.1",
-    "pylint>=3.3.6",
-    "pytest>=8.3.5",
+    "pylint>=3.2.7",
     "requests>=2.32.3",
     "ruff>=0.11.7",
     "taskipy>=1.14.1",
 ]
+
 
 
 [tool.ruff]
